--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -1,12 +1,8 @@
 <item>
-      <title>News</title>
-      <link>https://nirbhayjm.github.io/home/news/</link>
-      <pubDate>Mon, 10 Sep 2018 00:00:00 +0000</pubDate>
-      
-      <guid>https://nirbhayjm.github.io/home/news/</guid>
-      <description>[June, 2018] Our PyTorch code for VisDial-RL is now live!
- [July, 2018] I will be interning at SRI International in the Center for Vision Technologies, working on stochastic video prediction for navigation.
- [May, 2018] I served as a reviewer for ECCV 2018.
- [June, 2017] Graduated from IIT Kanpur! I will be joining Georgia Tech starting Fall 2017 as a PhD student with Dhruv Batra.
- [May, 2017] Paper on generative models for multi-label learning with Vikas Jain and Piyush Rai accepted at ICML, 2017.</description>
-</item>
+ <title>News</title>
+ <h1>News </h1>
+    <ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul> 
