--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -2,7 +2,10 @@
  <title>News</title>
  <h1>News </h1>
     <ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
+   <li>[July 2019] Passed the second evaluation of GSOC 2019.</li> 	
+   <li>[June 2019] Passed the first evaluation of GSOC 2019.</li>
+  <li>[May 2019] Our Paper titled 'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic' got accepted into ACL-SRW 2019.</li>
+  <li>[May 2019] Started 2 month internship at Ubisoft India Studios.</li>
+  <li>[May 2019] Got accepted into GSOC 2019. Will be working with the NumFocus Organisation on the project a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
+  <li> [April 2019] My paper for the ICLR Reproducibility Challenge 2019 was one of the 4 papers to be accepted to appear in the Journal of ReScience.</li>
 </ul> 
