--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -1,5 +1,5 @@
 <item>
-	<div style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
+	<div style="display: flex; flex-direction: row; justify-content: center; align-items: flex-start;">
 		<title>News</title>
  <h1>News </h1>
     <ul>
