--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -7,7 +7,7 @@
    <li> <b>[June 2019]</b> Passed the first evaluation of GSOC 2019.</li>
   <li>  <b>[May 2019]</b> Our Paper titled 'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic' got accepted into ACL-SRW 2019.</li>
   <li>  <b>[May 2019]</b> Started 2 month internship at Ubisoft India Studios.</li>
-  <li>  <b>[May 2019]</b> Got accepted into GSOC 2019. Will be working with the NumFocus Organisation on the project a <href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
+  <li>  <b>[May 2019]</b> Got accepted into GSOC 2019. Will be working with the NumFocus Organisation on the project <a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
   <li>  <b>[April 2019]</b> My paper for the ICLR Reproducibility Challenge 2019 was one of the 4 papers to be accepted to appear in the Journal of ReScience.</li>
 </ul> 
 	</div>
