--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -1,14 +1,25 @@
 <item>
-	<div style="display: flex; flex-direction: row; justify-content: center; align-items: flex-start;">
-		<title>News</title>
- <h1>News </h1>
-    <ul>
-   <li> <b>[July 2019]</b> Passed the second evaluation of GSOC 2019.</li> 	
-   <li> <b>[June 2019]</b> Passed the first evaluation of GSOC 2019.</li>
-  <li>  <b>[May 2019]</b> Our Paper titled 'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic' got accepted into ACL-SRW 2019.</li>
-  <li>  <b>[May 2019]</b> Started 2 month internship at Ubisoft India Studios.</li>
-  <li>  <b>[May 2019]</b> Got accepted into GSOC 2019. Will be working with the NumFocus Organisation on the project <a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
-  <li>  <b>[April 2019]</b> My paper for the ICLR Reproducibility Challenge 2019 was one of the 4 papers to be accepted to appear in the Journal of ReScience.</li>
-</ul> 
+	<!-- <div style="display: flex; flex-direction: row; justify-content: center; align-items: flex-start;"> -->
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-lg-4">
+				<title>News</title>
+				<h1>News </h1>
+			</div>
+			<div class="col-12 col-lg-8">
+				<ul>
+				<li> <b>[July 2019]</b> Passed the second evaluation of GSOC 2019.</li> 	
+				<li> <b>[June 2019]</b> Passed the first evaluation of GSOC 2019.</li>
+				<li>  <b>[May 2019]</b> Our Paper titled 'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic' got accepted into ACL-SRW 2019.</li>
+				<li>  <b>[May 2019]</b> Started 2 month internship at Ubisoft India Studios.</li>
+				<li>  <b>[May 2019]</b> Got accepted into GSOC 2019. Will be working with the NumFocus Organisation on the project <a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
+				<li>  <b>[April 2019]</b> My paper for the ICLR Reproducibility Challenge 2019 was one of the 4 papers to be accepted to appear in the Journal of ReScience.</li>
+				</ul>
+			</div>			
+		</div>
 	</div>
- 
+
+	
+	 
+	<!-- </div> -->
+
