--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -10,10 +10,10 @@
 				<ul>
 				<li> <b>[July 2019]</b> Passed the second evaluation of GSOC 2019.</li> 	
 				<li> <b>[June 2019]</b> Passed the first evaluation of GSOC 2019.</li>
-				<li>  <b>[May 2019]</b> Our Paper titled 'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic' got accepted into ACL-SRW 2019.</li>
+				<li>  <b>[May 2019]</b> Our Paper titled  <a href="https://aclweb.org/anthology/papers/P/P19/P19-2038/">'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic'</a> got accepted into ACL-SRW 2019.</li>
 				<li>  <b>[May 2019]</b> Started 2 month internship at Ubisoft India Studios.</li>
-				<li>  <b>[May 2019]</b> Got accepted into GSOC 2019. Will be working with the NumFocus Organisation on the project <a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
-				<li>  <b>[April 2019]</b> My paper for the ICLR Reproducibility Challenge 2019 was one of the 4 papers to be accepted to appear in the Journal of ReScience.</li>
+				<li>  <b>[May 2019]</b> Got accepted into <a href="https://summerofcode.withgoogle.com/">GSOC 2019</a>. Will be working with the NumFocus Organisation on the project <a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
+				<li>  <b>[April 2019]</b> My paper for the <a href="https://reproducibility-challenge.github.io/iclr_2019/">ICLR Reproducibility Challenge 2019</a> was one of the 4 papers to be accepted to appear in the <a href="https://rescience.github.io/bibliography/Didolkar_2019.html">Journal of ReScience</a>.</li>
 				</ul>
 			</div>			
 		</div>
@@ -22,4 +22,3 @@
 	
 	 
 	<!-- </div> -->
-
