--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -8,8 +8,9 @@
 			</div>
 			<div class="col-12 col-lg-8">
 				<ul>
-				<li> <b>[July 2019]</b>  Passed the second evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">GSOC 2019</a>.</li> 	
-				<li> <b>[June 2019]</b> Passed the first evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">GSOC 2019</a>.</li>
+				<li> <b>[September 2019]</b> Succesfully completed the third and final evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li>	
+				<li> <b>[July 2019]</b>  Passed the second evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li> 	
+				<li> <b>[June 2019]</b> Passed the first evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li>
 				<li> <b>[May 2019]</b> Our Paper titled  <a href="https://aclweb.org/anthology/papers/P/P19/P19-2038/" target="_blank">'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic'</a> got accepted into ACL-SRW 2019.</li>
 				<li> <b>[May 2019]</b> Started 2 month internship at Ubisoft India Studios.</li>
 				<li> <b>[May 2019]</b> Got accepted into <a href="https://summerofcode.withgoogle.com/" target="_blank">GSOC 2019</a>. Will be working with the NumFocus Organisation on the project <a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
