--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -8,7 +8,7 @@
 			</div>
 			<div class="col-12 col-lg-8">
 				<ul>
-				<li> <b>[September 2019]</b> Succesfully completed the third and final evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>. Please check the <a href="www.aniketdidolkar.in/post/gsoc_final/" target="_blank">post</a>!</li>	
+				<li> <b>[September 2019]</b> Succesfully completed the third and final evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>. Please check the <a href="post/gsoc_final/" target="_blank">post</a>!</li>	
 				<li> <b>[July 2019]</b>  Passed the second evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li> 	
 				<li> <b>[June 2019]</b> Passed the first evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li>
 				<li> <b>[May 2019]</b> Our Paper titled  <a href="https://aclweb.org/anthology/papers/P/P19/P19-2038/" target="_blank">'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic'</a> got accepted into ACL-SRW 2019.</li>
