--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -8,6 +8,7 @@
 			</div>
 			<div class="col-12 col-lg-8">
 				<ul>
+				<li> <b> [January 2020]</b> Started as Research Intern at IISC Bangalore.
 				<li> <b>[September 2019]</b> Successfully completed the third and final evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>. Please check the <a href="post/gsoc_final/" target="_blank">post</a>!</li>	
 				<li> <b>[July 2019]</b>  Passed the second evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li> 	
 				<li> <b>[June 2019]</b> Passed the first evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li>
