--- a/layouts/partials/widgets/experience.html
+++ b/layouts/partials/widgets/experience.html
@@ -34,9 +34,9 @@
         <div class="card">
           <div class="row no-gutters">
             {{ if .image_url }}
-              <div class="col-md-4" style="display:flex; flex-direction:column; justify-content: center;">
+              <div class="col-md-4" style="display:flex; flex-direction:column; justify-content: center; height: 6.7rem;">
                 {{ with .image_url }}
-                <img src="{{ . }}" class="card-img" style="padding: 20px" alt="...">
+                <img src="{{ . }}" class="card-img" style="padding: 20px; object-fit: scale-down;" alt="...">
                 {{ end }}
               </div>
               <div class="col-md-8">
