add missing height style

--- a/layouts/partials/widgets/experience.html
+++ b/layouts/partials/widgets/experience.html
@@ -36,7 +36,7 @@
             {{ if .image_url }}
               <div class="col-md-4" style="display:flex; flex-direction:column; justify-content: center; height: 6.7rem;">
                 {{ with .image_url }}
-                <img src="{{ . }}" class="card-img" style="padding: 20px; object-fit: scale-down;" alt="...">
+                <img src="{{ . }}" class="card-img" style="padding: 20px; object-fit: scale-down; height: 100%;" alt="...">
                 {{ end }}
               </div>
               <div class="col-md-8">
