--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -8,6 +8,7 @@
 			</div>
 			<div class="col-12 col-lg-8">
 				<ul>
+				<li><b>[October 2020]</b> Our paper on using mixup strategies in NLP has been accepted to COLING 2020!</li>
 				<li><b>[August 2020]</b> Started as Research Intern at MILA, Montreal!</li>
 				<li><b>[July 2020]</b> Our paper on using mixup strategies in speech has been accepted to Interspeech 2020!</li>
 				<li> <b> [January 2020]</b> Started as Research Intern at IISC Bangalore.
