--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -8,17 +8,16 @@
 			</div>
 			<div class="col-12 col-lg-8">
 				<ul>
-				<li><b>[October 2020]</b> Our paper on using mixup strategies in NLP has been accepted to COLING 2020!</li>
-				<li><b>[August 2020]</b> Started as Research Intern at MILA, Montreal!</li>
-				<li><b>[July 2020]</b> Our paper on using mixup strategies in speech has been accepted to Interspeech 2020!</li>
-				<li> <b> [January 2020]</b> Started as Research Intern at IISC Bangalore.
-				<li> <b>[September 2019]</b> Successfully completed the third and final evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>. Please check the <a href="post/gsoc_final/" target="_blank">post</a>!</li>	
-				<li> <b>[July 2019]</b>  Passed the second evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li> 	
-				<li> <b>[June 2019]</b> Passed the first evaluation of <a href="https://summerofcode.withgoogle.com/" target="_blank">Google Summer of Code 2019</a>.</li>
-				<li> <b>[May 2019]</b> Our Paper titled  <a href="https://aclweb.org/anthology/papers/P/P19/P19-2038/" target="_blank">'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic'</a> got accepted into ACL-SRW 2019.</li>
-				<li> <b>[May 2019]</b> Started 2 month internship at Ubisoft India Studios.</li>
-				<li> <b>[May 2019]</b> Got accepted into <a href="https://summerofcode.withgoogle.com/" target="_blank">GSOC 2019</a>. Will be working with the NumFocus Organisation on the project <a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
-				<li> <b>[April 2019]</b> My paper for the <a href="https://reproducibility-challenge.github.io/iclr_2019/" target="_blank">ICLR Reproducibility Challenge 2019</a> was one of the 4 papers to be accepted to appear in the <a href="https://rescience.github.io/bibliography/Didolkar_2019.html">Journal of ReScience</a>.</li>
+				<li> <b>Mar 2020:</b> Two new pre-prints out on arxiv: <a href="https://arxiv.org/pdf/2103.01937.pdf" target="_blank"> Neural Production Systems </a> and <a href="https://arxiv.org/pdf/2103.01197.pdf" target="_blank"> Coordination among Neural Modules Through a Shared Global Workspace</a>. 
+				<li><b>Feb 2020:</b> Serving on the program committee of ACL-IJCNLP 2021.</li>
+				<li><b>Oct 2020:</b> Our paper on using mixup strategies in NLP has been accepted to COLING 2020!</li>
+				<li><b>Aug 2020:</b> Started as Research Intern at MILA, Montreal!</li>
+				<li><b>July 2020:</b> Our paper on using mixup strategies in speech has been accepted to Interspeech 2020!</li>
+				<li> <b> Jan 2020:</b> Started as Research Intern at IISC Bangalore.
+				<li> <b>May 2019:</b> Our Paper titled  <a href="https://aclweb.org/anthology/papers/P/P19/P19-2038/" target="_blank">'ARHNet - Leveraging Community Interaction for Detection of Religious Hate Speech in Arabic'</a> got accepted into ACL-SRW 2019.</li>
+				<li> <b>May 2019:</b> Started 2 month internship at Ubisoft India Studios.</li>
+				<li> <b>May 2019:</b> Got accepted into <a href="https://summerofcode.withgoogle.com/" target="_blank">GSOC 2019</a>. Will be working with the NumFocus Organisation on the project <a href="https://summerofcode.withgoogle.com/projects/#4846902464479232">'Building Recurrent Neural Networks for ChainerX'</a>.</li>
+				<li> <b>Apr 2019:</b> My paper for the <a href="https://reproducibility-challenge.github.io/iclr_2019/" target="_blank">ICLR Reproducibility Challenge 2019</a> was one of the 4 papers to be accepted to appear in the <a href="https://rescience.github.io/bibliography/Didolkar_2019.html">Journal of ReScience</a>.</li>
 				</ul>
 			</div>			
 		</div>
