--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -8,6 +8,7 @@
 			</div>
 			<div class="col-12 col-lg-8">
 				<ul>
+				<li><b>Sep 2021:</b> Started as a Research Masters Student at MILA, Montreal!</li>
 				<li> <b>Mar 2020:</b> Two new pre-prints out on arxiv: <a href="https://arxiv.org/pdf/2103.01937.pdf" target="_blank"> Neural Production Systems </a> and <a href="https://arxiv.org/pdf/2103.01197.pdf" target="_blank"> Coordination among Neural Modules Through a Shared Global Workspace</a>. 
 				<li><b>Feb 2020:</b> Serving on the program committee of ACL-IJCNLP 2021.</li>
 				<li><b>Oct 2020:</b> Our paper on using mixup strategies in NLP has been accepted to COLING 2020!</li>
